# OpenMesh-Fast-Quadric-Simplification

./: CMakeLists.txt  LICENSE  Readme.md
src/: CMakeLists.txt  fast_quadric_mesh_simplification.cpp  fast_quadric_mesh_simplification.h  main.cpp  symetric_matrix.h
